Add react html parser

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "npm run generate && concurrently \"faust dev\" \"npm run watch-codegen\"",
     "build": "faust build",
     "generate": "faust generatePossibleTypes",
+    "prettier": "prettier --write --ignore-unknown .",
     "start": "faust start",
     "codegen": "graphql-codegen",
     "watch-codegen": "graphql-codegen -w"
@@ -14,6 +15,7 @@
     "@faustwp/core": "^1.0.1",
     "cva": "npm:class-variance-authority@^0.6.1",
     "graphql": "^16.6.0",
+    "html-react-parser": "^4.0.0",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
