--- a/package.json
+++ b/package.json
@@ -14,12 +14,23 @@
     "@apollo/client": "^3.7.10",
     "@faustwp/cli": "^1.0.1",
     "@faustwp/core": "^1.0.1",
+    "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "clsx": "^2.0.0",
     "cva": "npm:class-variance-authority@^0.6.1",
+    "framer-motion": "^10.14.0",
     "graphql": "^16.6.0",
     "html-react-parser": "^4.0.0",
-    "next": "^13.2.4",
+    "next": "^13.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-aria": "^3.27.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "tailwind-merge": "^1.14.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.2.2",
@@ -34,6 +45,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.0.2"
   }
 }
